--- a/Scripts/Figure_01/Figure_01.html
+++ b/Scripts/Figure_01/Figure_01.html
@@ -1919,7 +1919,7 @@ document.</p>
 <span id="cb2-2"><a href="#cb2-2" tabindex="-1"></a>script_folder <span class="ot">&lt;-</span> <span class="fu">dirname</span>(rstudioapi<span class="sc">::</span><span class="fu">getSourceEditorContext</span>()<span class="sc">$</span>path)</span>
 <span id="cb2-3"><a href="#cb2-3" tabindex="-1"></a></span>
 <span id="cb2-4"><a href="#cb2-4" tabindex="-1"></a><span class="co"># Define the data folder and output folder</span></span>
-<span id="cb2-5"><a href="#cb2-5" tabindex="-1"></a>data_folder <span class="ot">&lt;-</span> <span class="st">&#39;./Data/Figure_01&#39;</span></span>
+<span id="cb2-5"><a href="#cb2-5" tabindex="-1"></a>data_folder <span class="ot">&lt;-</span> <span class="st">&#39;./Data&#39;</span></span>
 <span id="cb2-6"><a href="#cb2-6" tabindex="-1"></a>output_folder <span class="ot">&lt;-</span> <span class="st">&#39;./Figures/Figure_01&#39;</span></span></code></pre></div>
 </div>
 <div id="setting-seed" class="section level2">
